#css打包及图片静态文件的打包

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.6",
+    "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
     "vue": "^2.5.13",
     "vue-loader": "^13.6.0",
     "vue-template-compiler": "^2.5.13",
