#css预处理器的使用

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.6",
     "style-loader": "^0.19.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "url-loader": "^0.6.2",
     "vue": "^2.5.13",
     "vue-loader": "^13.6.0",
