--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js"
   },
   "author": "Jasonccj",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
@@ -19,7 +22,8 @@
     "vue": "^2.5.13",
     "vue-loader": "^13.6.0",
     "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.1"
   },
   "devDependencies": {}
 }
