--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "author": "Jasonccj",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^7.2.3",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "i": "^0.3.6",
+    "post": "0.0.1",
+    "postcss-loader": "^2.0.9",
     "style-loader": "^0.19.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
