--- a/.babelrc
+++ b/.babelrc
@@ -9,3 +9,4 @@
 
 //转换vue中的jsx代码
 //npm i babel-preset-env@1.6.1 babel-plugin-transform-vue-jsx@3.5.0
+//npm i babel-helper-vue-jsx-merge-props@^2.0.0 babel-plugin-syntax-jsx@^6.8.0
