--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "autoprefixer": "^7.2.3",
     "babel-core": "^6.26.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-jsx": "^6.8.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
