--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "i": "^0.3.6",
